--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Imports:
     stats,
     utils
 Suggests:
-    optparse
+    knitr,
+    optparse,
+    rmarkdown
 Maintainer: Mike V. Puijk <mikepuijk@hotmail.com>
 Description: Draws gene or genome maps and comparisons between these, in a 
    publication-grade manner. Starting from simple, common files, it will 
@@ -25,3 +27,4 @@ LazyLoad: yes
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+VignetteBuilder: knitr
