--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,9 @@ Type: Package
 Title: Plot Publication-Grade Gene and Genome Maps
 Version: 2.0.0
 Date: 2025-05-20
-Author: Lionel Guy <lionel.guy@imbim.uu.se>,  Mike V. Puijk <mikepuijk@hotmail.com>
+Author: 
+    Lionel Guy <lionel.guy@imbim.uu.se>,
+    Mike Puijk <mikepuijk@hotmail.com>
 Depends:
     R (>= 2.10.0),
     grid
@@ -19,7 +21,7 @@ Suggests:
     knitr,
     optparse,
     rmarkdown
-Maintainer: Lionel Guy <lionel.guy@imbim.uu.se>
+Maintainer: Mike Puijk <mikepuijk@hotmail.com>
 Description: Draws gene or genome maps and comparisons between these, in a 
    publication-grade manner. Starting from simple, common files, it will 
    draw postscript or PDF files that can be sent as such to journals.
@@ -29,3 +31,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 VignetteBuilder: knitr
+URL: https://mvpuijk.github.io/genoPlotR/
